# Hat

./: .pre-commit-config.yaml  pyproject.toml
docs/: pylint.md
hat/agent/: agent_input.py
hat/playground/: chat.py  identity_detection.py
src/hat/anki_flashcard_generator/: anki_note_client.py  auto_flashcard_generator.py  main.py
src/hat/assertions/: ai_assert.py  ai_assert_template.md  str_format.py
src/hat/cache/: cache.py  test_cache.py
src/hat/cat/: argument_parser.py  cat.py  common.py  dspy.ipynb  langchain.jina2
src/hat/checkers/: check_instruction.py  prompt_template_creator.ipynb
src/hat/comparators/: pdf_to_boxes.py
src/hat/decorators/: __init__.py  wrapper.py
src/hat/formatters/: block_code_language.py  formater.py  prompt_formater.py
src/hat/instructions/: base_instruction.py  cfg.py  commit_message_writer_instruction.py  cot_instruction.py  (+2 more)
src/playground/: chat.py  func_2_instructions.py
tests/: conftest.py  test_ai_assert.py  test_cot_instruction.py  test_openai_query.py  test_retry_output_parser.py  test_tool_timeout_middleware.py
tests/checkers/: stable_response_checker.py
tests/data/: code.py
tests/debugger/: debugger.py
tests/executors/: base_executors.py
tests/middlewares/: tool_timeout_middleware.py
tests/playground/: assertion.py  formater.py  google_form.py  test_chat.py  test_func_2_instructions.py  tf_question_check.py  tf_question_with_explanation.py
tests/templates/: index.html
tests/tools/: add.py  weather.py
tests/tutorials/: activiti_diagram.ipynb  data.csv  json_to_csv.ipynb  sequence_query.ipynb
(+80 files in other folders)
