[project]
name = "hat"
version = "0.1.0"
description = ""
authors = [
    {name = "manhdt",email = "thitkhotau.no1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "pyzed (>=1.3.0,<2.0.0)",
    "langchain-classic (>=1.0.0,<2.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pypdf (>=6.5.0,<7.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

#[tool.poetry]
#packages = [{include = "hat", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest-snapshot (>=0.9.0,<0.10.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "types-psutil (>=7.2.1.20251231,<8.0.0.0)"
]
